--- a/app/templates/inc/featurettes.html
+++ b/app/templates/inc/featurettes.html
@@ -7,7 +7,7 @@
                 class="img-fluid rounded">
         </div>
         <div class="col-md-6 mb-3">
-            <h2 class="display-4">Real-Time Monitoring</h2>
+            <h2 class="display-4">+100 checks en un mismo sitio</h2>
             <p class="lead">Analyze your site's performance in real time with our powerful tools.</p>
             <div class="card">
                 <div class="card-body">
@@ -28,7 +28,7 @@
                 class="img-fluid rounded">
         </div>
         <div class="col-md-6 order-md-1 mb-3">
-            <h2 class="display-4">Comprehensive Reporting</h2>
+            <h2 class="display-4">Informes para todos los departamentos</h2>
             <p class="lead">Generate detailed reports to help you understand and improve performance.</p>
             <div class="accordion" id="reportAccordion">
                 <div class="accordion-item">
@@ -67,7 +67,7 @@
                 class="img-fluid rounded">
         </div>
         <div class="col-md-6 mb-3">
-            <h2 class="display-4">Customizable Dashboards</h2>
+            <h2 class="display-4">Guias y recursos casi infinitos</h2>
             <div class="table-responsive">
                 <table class="table">
                     <thead>
