--- a/app/templates/user/change_password.html
+++ b/app/templates/user/change_password.html
@@ -2,8 +2,10 @@
 
 {% block title %}Change Password{% endblock %}
 
+
 {% block content %}
-<div class="container my-5">
+{% include 'inc/breadcrumbs.html' %}
+<div class="container my-5 mb-5">
     <div class="row justify-content-center">
         <div class="col-md-6">
             <div class="card shadow-sm border-0">
