--- a/app/templates/user/edit_payment.html
+++ b/app/templates/user/edit_payment.html
@@ -3,8 +3,9 @@
 {% block title %}Editar Métodos de Pago{% endblock %}
 
 {% block content %}
-<div class="container mt-5">
-    <h1 class="text-center mb-4">Editar Métodos de Pago</h1>
+{% include 'inc/breadcrumbs.html' %}
+<div class="container mb-5">
+    <!--<h1 class="text-center mb-4">Editar Métodos de Pago</h1>-->
     <div class="row justify-content-center">
         <div class="col-lg-8 col-md-10">
             <div class="card shadow-lg border-0">
