--- a/app/templates/user/edit_subscription.html
+++ b/app/templates/user/edit_subscription.html
@@ -1,8 +1,9 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="container mt-5">
-    <h1 class="text-center mb-4">Editar Suscripción</h1>
+{% include 'inc/breadcrumbs.html' %}
+<div class="container mb-5">
+    <!-- <h1 class="text-center mb-4">Editar Suscripción</h1> -->
     <div class="row justify-content-center">
         <div class="col-lg-6 col-md-8">
             <div class="card shadow-lg border-0">
