--- a/app/templates/config.html
+++ b/app/templates/config.html
@@ -3,6 +3,7 @@
 {% block title %}Configuration{% endblock %}
 
 {% block content %}
+{% include 'inc/breadcrumbs.html' %}
 <style>
     .card {
     border-radius: 10px;
@@ -27,7 +28,7 @@
 }
 
 </style>
-<div class="container my-5">
+<div class="container my-5 mb-5">
     <div class="row justify-content-center">
         <div class="col-md-8 col-lg-6">
             <div class="card shadow-sm border-0">
