--- a/app/templates/user/profile.html
+++ b/app/templates/user/profile.html
@@ -3,7 +3,8 @@
 {% block title %}User Profile{% endblock %}
 
 {% block content %}
-<div class="container my-5">
+{% include 'inc/breadcrumbs.html' %}
+<div class="container my-5 mb-5">
     <div class="row">
         <!-- Main Menu Section -->
         <div class="col-12 mb-4">
