--- a/app/templates/inc/jumbotron.html
+++ b/app/templates/inc/jumbotron.html
@@ -8,8 +8,8 @@
                 <p class="lead text-light">Usa MoOnitor <b>sin coste</b> y crea informes profesionales por <b>6€/mes</b></p>
 
                 <div class="d-flex justify-content-center justify-content-lg-start mb-3">
-                    <a href="#pricing" class="btn btn-primary btn-lg btn-cta me-3">Ver Precios</a>
-                    <a href="{{ url_for('register') }}" class="btn btn-secondary btn-lg me-3">Probar gratis</a>
+                    <a href="#pricing" class="btn btn-primary btn-lg btn-cta me-3">Empezar Gratis</a>
+                    <a href="#online-test" class="btn btn-secondary btn-lg me-3">Probar online</a>
                 </div>
 
                 <!-- Additional Benefits with Icons -->
