--- a/app/templates/inc/suscriptions.html
+++ b/app/templates/inc/suscriptions.html
@@ -1,7 +1,17 @@
 <!-- Pricing Section -->
-<section id="pricing" class="container _pricing-section">
+<section id="pricing" class="container _pricing-section mt-5 mb-5">
     <div class="text-center mb-4">
         <h2>Suscripciones</h2>
+        <div class="text-center mb-4">
+            <div class="form-check form-switch d-inline-block">
+                <input class="form-check-input" type="checkbox" id="togglePricing" size="20"
+                    aria-label="Toggle yearly billing" checked>
+                <label class="form-check-label" for="togglePricing">Pago anual con <span class="discount-text">12%
+                        descuento</span></label>
+            </div>
+
+        </div>
+
     </div>
 
     <div class="row text-center">
@@ -67,15 +77,6 @@
         </div>
     </div>
 
-    <div class="text-center mb-4">
-        <div class="form-check form-switch d-inline-block">
-            <input class="form-check-input" type="checkbox" id="togglePricing" size="20"
-                aria-label="Toggle yearly billing" checked>
-            <label class="form-check-label" for="togglePricing">Pago anual incluye <span class="discount-text">* 12%
-                    discount</span></label>
-        </div>
-
-    </div>
 
 </section>
 
