--- a/app/templates/inc/suscriptions.html
+++ b/app/templates/inc/suscriptions.html
@@ -25,9 +25,9 @@
                     <h3 class="price_free">0€ <span class="small price-label"><u>siempre</u></span></h3>
                     <ul class="list-unstyled text-start">
                         <li><i class="bi bi-check-circle text-success"></i> Herramientas básicas</li>
-                        <li><i class="bi bi-check-circle text-success"></i> Informes limitados</li>
+                        <li><i class="bi bi-check-circle text-success"></i> Resultados limitados</li>
                         <li><i class="bi bi-x-circle text-danger"></i> Sin publicidad</li>
-                        <li><i class="bi bi-x-circle text-danger"></i> Sin Soporte</li>
+                        <li><i class="bi bi-x-circle text-danger"></i> Soporte</li>
                     </ul>
                     <a href="{{ url_for('register') }}" class="btn btn-primary">Entrar</a>
                 </div>
