--- a/app/templates/start.html
+++ b/app/templates/start.html
@@ -19,15 +19,18 @@
 
 {% include "inc/benefits.html" %}
 
+
 {% include "inc/online_test.html" %}
 
+{% include "tools/tools_by_cat.html" %}
+
+{% include "tools/new-tools.html" %}
 
 {% include "inc/featurettes.html" %}
 
 {% include "inc/features.html" %}
 
-
-
+{% include "tools/most-used.html" %}
 
 {% include "inc/testimonials.html" %}
 
