--- a/app/templates/inc/benefits.html
+++ b/app/templates/inc/benefits.html
@@ -1,7 +1,8 @@
 <!-- Benefits Section -->
-<section class="benefits-section  py-5 mb-3" style="background: linear-gradient(to bottom right, #6a11cb, #2575fc);">
+<section class="benefits-section  py-5 mb-3">
+    <!-- style="background: linear-gradient(to bottom right, #6a11cb, #2575fc);"> -->
     <div class="container">
-        <h2 class="text-center mb-5 display-4 fw-bold text-dark">Why Choose Our Tools?</h2>
+        <!--<h2 class="text-center mb-5 display-4 fw-bold text-dark">Why Choose Our Tools?</h2>-->
         <div class="row mb-3">
             <div class="col-md-4 mb-4">
                 <div class="benefit-card p-4 shadow-lg rounded-4 text-center">
@@ -29,7 +30,7 @@
                         <i class="bi bi-file-earmark-text fa-4x p-3 rounded-circle text-white"
                             style="background-color: #ffc107;"></i>
                     </div>
-                    
+
                     <h5 class="mb-3">Seguro y Privado</h5>
                     <p class="text-muted">Your data is protected. No tracking or data sharing.</p>
                 </div>
