--- a/app/templates/test.html
+++ b/app/templates/test.html
@@ -1,130 +1,229 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Lateral Opening Bootstrap Navbar</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    @media(max-width:767px){
-      .navbar .navbar-collapse.collapsing{ 
-        height:auto !important;
-      }
-      .navbar .lateral-left{
-        left:-100%; 
-        animation: slide-out-left 200ms forwards;
-      }
-      .navbar .lateral-left.open{ 
-        animation: slide-in-left 200ms forwards;
-      }
-      .navbar .lateral-right{
-        right:-100%;
-        animation: slide-out-right 200ms forwards;
-      }
-      .navbar .lateral-right.open{ 
-        animation: slide-in-right 200ms forwards;
-      }
-      .navbar .navbar-collapse{ 
-        top:0px; bottom:0px; 
-        position:fixed; 
-        width:80%; width:calc(100% - 60px); 
-        max-width:320px; 
-        height:auto !important;
-    
-        /* Optional styling */
-        background:#f8f8f8;
-        padding:30px;
-        top: 56px;
-      }
-      .navbar .lateral-left.open,
-      .navbar .lateral-right.open{
-        display:block !important;
-        overflow-y:auto;
-      }
-    }
-    
-    @keyframes slide-in-left{ 
-      0%		{ left:-100%; }
-      100%	{ left:0px; }
-    }
-    @keyframes slide-out-left{
-      0%		{ left:0px; }
-      100%	{ left:-100%; }
-    }
-    @keyframes slide-in-right{ 
-      0%		{ right:-100%; }
-      100%	{ right:0px; }
-    }
-    @keyframes slide-out-right{
-      0%		{ right:0px; }
-      100%	{ right:-100%; }
-    }
-  </style>
-</head>
-<body>
-    
-<!-- Default Bootstrap navbar example -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-      <!-- Brand and toggle get grouped for better mobile display -->
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <a class="navbar-brand" href="#">Brand</a>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav me-auto">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Link</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Dropdown
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Separated link</a></li>
-            </ul>
-          </li>
+<!-- app/templates/dashboard.html -->
+
+{% extends "base.html" %}
+
+{% block title %}Herramienta{% endblock %}
+
+{% block content %}
+
+<div class="jumbotron">
+  <h1 class="display-4">¡Bienvenido a nuestra aplicación!</h1>
+  <p class="lead">HAZTE PRO ahora para comenzar a disfrutar de todas las funcionalidades.</p>
+  <hr class="my-4">
+  <p>Puedes acceder a características exclusivas al registrarte en nuestra plataforma.</p>
+  <a class="btn btn-primary btn-lg" href="{{ url_for('index') }}" role="button">PRO</a>
+</div>
+
+
+<div class="row mb-3">
+  <div class="col-md-4">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Formulario</h5>
+        <form>
+          <div class="mb-3">
+            <label for="exampleFormControlInput1" class="form-label">Campo 1</label>
+            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="ejemplo@correo.com">
+          </div>
+          <button type="submit" class="btn btn-primary">Enviar</button>
+        </form>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-4">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Información</h5>
+        <p class="card-text">Este es un ejemplo de información en formato tarjeta.</p>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-4">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Información</h5>
+        <p class="card-text">Este es otro ejemplo de información en formato tarjeta.</p>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="row mb-3">
+  <div class="col">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Información</h5>
+        <p class="card-text">Este es un ejemplo de información en formato tarjeta.</p>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="row mb-3">
+  <div class="col-md-6">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Información</h5>
+        <p class="card-text">Este es un ejemplo de información en formato tarjeta.</p>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-6">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Información</h5>
+        <p class="card-text">Este es otro ejemplo de información en formato tarjeta.</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<div class="row mb-3">
+  <div class="col-md-6">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Modal básico</h5>
+        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+          Abrir modal
+        </button>
+
+
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                Contenido del modal
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                <button type="button" class="btn btn-primary">Guardar cambios</button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+      </div>
+    </div>
+  </div>
+
+
+  <div class="col-md-6">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Modal con animación</h5>
+        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModalAnimated">
+          Abrir modal
+        </button>
+
+
+        <div class="modal fade animate__animated animate__fadeIn" id="exampleModalAnimated" tabindex="-1"
+          aria-labelledby="exampleModalLabelAnimated" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabelAnimated">Modal title</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                Contenido del modal
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                <button type="button" class="btn btn-primary">Guardar cambios</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="row mb-3">
+  <div class="col-md-6">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Badges</h5>
+        <span class="badge bg-primary">Primary</span>
+        <span class="badge bg-secondary">Secondary</span>
+        <span class="badge bg-success">Success</span>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-6">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Tooltips</h5>
+        <button type="button" class="btn btn-secondary" data-bs-toggle="tooltip" data-bs-placement="top"
+          title="Tooltip on top">Tooltip on top</button>
+        <button type="button" class="btn btn-secondary" data-bs-toggle="tooltip" data-bs-placement="right"
+          title="Tooltip on right">Tooltip on right</button>
+        <button type="button" class="btn btn-secondary" data-bs-toggle="tooltip" data-bs-placement="bottom"
+          title="Tooltip on bottom">Tooltip on bottom</button>
+        <button type="button" class="btn btn-secondary" data-bs-toggle="tooltip" data-bs-placement="left"
+          title="Tooltip on left">Tooltip on left</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="row mb-3">
+  <div class="col-md-4">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Buttons</h5>
+        <button type="button" class="btn btn-primary">Primary</button>
+        <button type="button" class="btn btn-secondary">Secondary</button>
+        <button type="button" class="btn btn-success">Success</button>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-4">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">List Groups</h5>
+        <ul class="list-group">
+          <li class="list-group-item">Item 1</li>
+          <li class="list-group-item">Item 2</li>
+          <li class="list-group-item">Item 3</li>
         </ul>
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Dropdown
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Separated link</a></li>
-            </ul>
-          </li>
-        </ul>
-      </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
-  </nav>
-  <!-- /Default Bootstrap navbar example -->
-  
+      </div>
+    </div>
+  </div>
+  <div class="col-md-4">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Carousel</h5>
+        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="{{ url_for('static', filename='logo.png') }}" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="{{ url_for('static', filename='logo.png') }}" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="{{ url_for('static', filename='logo.png') }}" class="d-block w-100" alt="...">
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-<script>
-  // Menu side toggle
-  document.addEventListener('DOMContentLoaded', function () {
-    var toggler = document.querySelector('.navbar-toggler');
-    var navbarCollapse = document.querySelector('.navbar-collapse');
-
-    toggler.addEventListener('click', function () {
-      navbarCollapse.classList.toggle('open');
-    });
-  });
-</script>
-
-</body>
-</html>
+{% endblock %}
