--- a/app/templates/inc/suscriptions.html
+++ b/app/templates/inc/suscriptions.html
@@ -26,8 +26,9 @@
                     <ul class="list-unstyled text-start">
                         <li><i class="bi bi-check-circle text-success"></i> Herramientas básicas</li>
                         <li><i class="bi bi-check-circle text-success"></i> Resultados limitados</li>
-                        <li><i class="bi bi-x-circle text-success"></i> Panel de Usuario</li>
-                        <li><i class="bi bi-x-circle text-success"></i> Guias y manuales</li>
+                        <li><i class="bi bi-check-circle text-success"></i> Panel de Usuario</li>
+                        <li><i class="bi bi-x-circle text-danger"></i> Ad free</li>
+                        <li><i class="bi bi-x-circle text-danger"></i> Soporte</li>
                     </ul>
                     <a href="{{ url_for('register') }}" class="btn btn-primary">Entrar</a>
                 </div>
@@ -47,7 +48,8 @@
                     <ul class="list-unstyled text-start">
                         <li><i class="bi bi-check-circle text-success"></i> Todas las Herramientas</li>
                         <li><i class="bi bi-check-circle text-success"></i> Informes completos</li>
-                        <li><i class="bi bi-check-circle text-success"></i> Panel avanzado</li>
+                        <li><i class="bi bi-check-circle text-success"></i> Panel avanzado de usuario</li>
+                        <li><i class="bi bi-check-circle text-success"></i> Ad free</li>
                         <li><i class="bi bi-check-circle text-success"></i> Tickets de soporte</li>
                     </ul>
                     <a href="{{ url_for('register') }}/pro" class="btn btn-success">Suscribirse</a>
@@ -68,7 +70,8 @@
                     <ul class="list-unstyled text-start">
                         <li><i class="bi bi-check-circle text-success"></i> Herramientas e informes completos</li>
                         <li><i class="bi bi-check-circle text-success"></i> Sugerencias y mejoras con IA</li>
-                        <li><i class="bi bi-x-circle text-success"></i> Panel Marca blanca</li>
+                        <li><i class="bi bi-x-circle text-success"></i> Panel con tu marca</li>
+                        <li><i class="bi bi-x-circle text-success"></i> Informes en PDF</li>
                         <li><i class="bi bi-x-circle text-success"></i> Soporte en linea</li>
                     </ul>
                     <a href="{{ url_for('register') }}/agency" class="btn btn-warning">Contactar</a>
